--- a/css/navbar.css
+++ b/css/navbar.css
@@ -19,10 +19,6 @@ body
     height: 2px;
     right:0px;
     background-color: aliceblue;
-    transform: translateY(-3px);
-    -moz-transform: translateY(-3px);
-    -o-transform: translateY(-3px);
-    -webkit-transform: translateY(-3px);
     transition: all 0.3s linear;
     -moz-transform: all 0.3s linear;
     -o-transform: all 0.3s linear;
@@ -34,8 +30,13 @@ body
     content: '';
     width: 30px;
     height: 2px;
-    transform: translateY(10px);
     background-color: aliceblue;
+
+    transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+    -o-transform: translateY(10px);
+
     transition-delay: 0.2s;
     transition-property: all;
     transition-duration: 0.3s;
@@ -64,6 +65,7 @@ body
     -webkit-transform: translateY(-10px);
     -o-transform: translateY(-10px);
 }
+/*-------------rotate-------------*/
 .rotate>span
 {
     width: 0;
@@ -86,3 +88,4 @@ body
     -o-transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
 }
+/*-------------rotate-------------*/
