--- a/css/navbar.css
+++ b/css/navbar.css
@@ -38,22 +38,22 @@ body
     -o-transform: translateY(10px);
 
     transition-delay: 0.2s;
-    transition-property: all;
+    transition-property: transform margin;
     transition-duration: 0.3s;
     transition-timing-function: linear;
 
     -moz-transition-delay: 0.2s;
-    -moz-transition-property: all;
+    -moz-transition-property: transform margin;
     -moz-transition-duration: 0.3s;
     -moz-transition-timing-function: linear;
 
     -webkit-transition-delay: 0.2s;
-    -webkit-transition-property: all;
+    -webkit-transition-property: transform margin;
     -webkit-transition-duration: 0.3s;
     -webkit-transition-timing-function: linear;
     
     -o-transition-delay: 0.2s;
-    -o-transition-property: all;
+    -o-transition-property: transform margin;
     -o-transition-duration: 0.3s;
     -o-transition-timing-function: linear;
     
@@ -73,7 +73,6 @@ body
 }
 .rotate>span::before
 {
-    opacity: 1;
     transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
@@ -82,7 +81,6 @@ body
 .rotate>span::after
 {
     margin-top: -2px;
-    opacity: 1;
     transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
