--- a/css/navbar.css
+++ b/css/navbar.css
@@ -87,3 +87,7 @@ body
     -webkit-transform: rotate(-45deg);
 }
 /*-------------rotate-------------*/
+.navbar-toggler
+{
+    background-color:rgba(240, 248, 255, 0);
+}
