--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,12 +17,28 @@ body
     content: '';
     width: 30px;
     height: 2px;
+    padding: 0px 0px;
     right:0px;
     background-color: aliceblue;
-    transition: width right 0.3s linear;
-    -moz-transform: width right 0.3s linear;
-    -o-transform: width right 0.3s linear;
-    -webkit-transform: width right 0.3s linear;
+    transition-delay: 0.2s;
+    transition-property: width right;
+    transition-duration: 0.3s;
+    transition-timing-function: linear;
+
+    -moz-transition-delay: 0.2s;
+    -moz-transition-property: width right;
+    -moz-transition-duration: 0.3s;
+    -moz-transition-timing-function: linear;
+
+    -webkit-transition-delay: 0.2s;
+    -webkit-transition-property: width right;
+    -webkit-transition-duration: 0.3s;
+    -webkit-transition-timing-function: linear;
+    
+    -o-transition-delay: 0.2s;
+    -o-transition-property: width right;
+    -o-transition-duration: 0.3s;
+    -o-transition-timing-function: linear;
 }
 .navbar-toggler>span::before,.navbar-toggler>span::after
 {
