--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,8 +17,8 @@ body
     content: '';
     width: 30px;
     height: 2px;
-    padding: 0px 0px;
     right:0px;
+    padding-right: 0px 0px;
     background-color: aliceblue;
     transition-delay: 0.2s;
     transition-property: width right;
