--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,25 +17,22 @@ body
     content: '';
     width: 30px;
     height: 2px;
+    
     right:0px;
-    padding-right: 0px 0px;
-    background-color: aliceblue;
-    transition-delay: 0.2s;
+    
+    background-color: rgb(66, 127, 180);
     transition-property: width right;
     transition-duration: 0.3s;
     transition-timing-function: linear;
 
-    -moz-transition-delay: 0.2s;
     -moz-transition-property: width right;
     -moz-transition-duration: 0.3s;
     -moz-transition-timing-function: linear;
 
-    -webkit-transition-delay: 0.2s;
     -webkit-transition-property: width right;
     -webkit-transition-duration: 0.3s;
     -webkit-transition-timing-function: linear;
     
-    -o-transition-delay: 0.2s;
     -o-transition-property: width right;
     -o-transition-duration: 0.3s;
     -o-transition-timing-function: linear;
@@ -53,22 +50,22 @@ body
     -webkit-transform: translateY(10px);
     -o-transform: translateY(10px);
 
-    transition-delay: 0.2s;
+    transition-delay: 0.25s;
     transition-property: transform margin;
     transition-duration: 0.3s;
     transition-timing-function: linear;
 
-    -moz-transition-delay: 0.2s;
+    -moz-transition-delay: 0.25s;
     -moz-transition-property: transform margin;
     -moz-transition-duration: 0.3s;
     -moz-transition-timing-function: linear;
 
-    -webkit-transition-delay: 0.2s;
+    -webkit-transition-delay: 0.25s;
     -webkit-transition-property: transform margin;
     -webkit-transition-duration: 0.3s;
     -webkit-transition-timing-function: linear;
     
-    -o-transition-delay: 0.2s;
+    -o-transition-delay: 0.25s;
     -o-transition-property: transform margin;
     -o-transition-duration: 0.3s;
     -o-transition-timing-function: linear;
