--- a/css/index.css
+++ b/css/index.css
@@ -4,13 +4,10 @@
 }
 .tb .row
 {
-    height: 4em;
+    min-height: 4em;
 }
-.row:nth-child(odd) span:nth-child(odd)
-{
-    background-color: rgb(177, 177, 177);
-}
-.row:nth-child(even) span:nth-child(even)
+.r1:nth-child(odd) span:nth-child(odd),
+.r1:nth-child(even) span:nth-child(even)
 {
     background-color: rgb(177, 177, 177);
 }
