--- a/css/index.css
+++ b/css/index.css
@@ -6,8 +6,7 @@
 {
     min-height: 4em;
 }
-.r1:nth-child(odd) span:nth-child(odd),
-.r1:nth-child(even) span:nth-child(even)
+.row-table:nth-child(odd) span:nth-child(odd),.row-table:nth-child(even) span:nth-child(even)
 {
     background-color: rgb(177, 177, 177);
 }
